Changed event description

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="weirdHeader">
-        Осталось времени
+        До встречи
     </div>
     <div class="counter" id="pastMonths">
         Месяцев: <span id="monthsPast"></span>
